@@ -18,14 +18,23 @@
 
 package org.apache.zookeeper.test;
 import java.io.IOException;
+import java.util.ArrayList;
+
+import junit.framework.TestCase;
 
 import org.apache.log4j.Logger;
+import org.apache.zookeeper.CreateMode;
 import org.apache.zookeeper.KeeperException;
+import org.apache.zookeeper.WatchedEvent;
+import org.apache.zookeeper.Watcher;
+import org.apache.zookeeper.ZooDefs;
+import org.apache.zookeeper.ZooKeeper;
 import org.junit.Before;
 import org.junit.Test;
 
-public class QuorumTest extends QuorumBase {
+public class QuorumTest extends TestCase {
     private static final Logger LOG = Logger.getLogger(QuorumTest.class);
+    public static final long CONNECTION_TIMEOUT = ClientTest.CONNECTION_TIMEOUT;
     private QuorumBase qb = new QuorumBase();
     private final ClientTest ct = new ClientTest();
     
@@ -85,6 +94,44 @@ public class QuorumTest extends QuorumBase {
             InterruptedException, KeeperException
     {
         ct.testMutipleWatcherObjs();
+    }
+    
+    @Test
+    /**
+     * Connect to two different servers with two different handles using the same session and
+     * make sure we cannot do any changes.
+     */
+    public void testSessionMove() throws IOException, InterruptedException, KeeperException {
+        String hps[] = qb.hostPort.split(",");
+        ZooKeeper zk = new DisconnectableZooKeeper(hps[0], ClientBase.CONNECTION_TIMEOUT, new Watcher() {
+            public void process(WatchedEvent event) {
+        }});
+        zk.create("/t1", new byte[0], ZooDefs.Ids.OPEN_ACL_UNSAFE, CreateMode.EPHEMERAL);
+        // This should stomp the zk handle
+        ZooKeeper zknew = new DisconnectableZooKeeper(hps[1], ClientBase.CONNECTION_TIMEOUT, new Watcher() {
+            public void process(WatchedEvent event) {
+            }}, zk.getSessionId(), zk.getSessionPasswd());
+        zknew.create("/t2", new byte[0], ZooDefs.Ids.OPEN_ACL_UNSAFE, CreateMode.EPHEMERAL);
+        try {
+            zk.create("/t3", new byte[0], ZooDefs.Ids.OPEN_ACL_UNSAFE, CreateMode.EPHEMERAL);
+            fail("Should have lost the connection");
+        } catch(KeeperException.SessionMovedException e) {
+        }
+        
+        ArrayList<ZooKeeper> toClose = new ArrayList<ZooKeeper>();
+        toClose.add(zknew);
+        // Let's just make sure it can still move
+        for(int i = 0; i < 10; i++) {
+            zknew = new DisconnectableZooKeeper(hps[1], ClientBase.CONNECTION_TIMEOUT, new Watcher() {
+                public void process(WatchedEvent event) {
+                }}, zk.getSessionId(), zk.getSessionPasswd());
+            toClose.add(zknew);
+            zknew.create("/t-"+i, new byte[0], ZooDefs.Ids.OPEN_ACL_UNSAFE, CreateMode.EPHEMERAL);
+        }
+	for(ZooKeeper z: toClose) {
+            z.close();
+        }
+        zk.close();
     }
 
     // skip superhammer and clientcleanup as they are too expensive for quorum
